--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ flask-cors = "*"
 flask-bcrypt = "*"
 python-dotenv = "*"
 pymongo = {extras = ["srv"], version = "*"}
+flask-jwt-extended = "*"
 
 [dev-packages]
 
