fix cors issue, set up new endpoint to allow user search by super_admin, create basic frontend page to allow super_admin to conduct search

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -11,6 +11,7 @@ flask-bcrypt = "*"
 python-dotenv = "*"
 pymongo = {extras = ["srv"], version = "*"}
 flask-jwt-extended = "*"
+flask-pymongo = "*"
 
 [dev-packages]
 
