allow image uploads to cloudinary, store new gym to db

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -12,6 +12,7 @@ python-dotenv = "*"
 pymongo = {extras = ["srv"], version = "*"}
 flask-jwt-extended = "*"
 flask-pymongo = "*"
+cloudinary = "*"
 
 [dev-packages]
 
